packages/css/src/header.css
.at-header {
  --at-header-max-width: 108rem;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  container-type: inline-size;
  margin: var(--ds-size-7) 0 0 0;
  padding: 0 1rem;
  color: var(--ds-color-neutral-text-default);

  /* disable visited color in both the navigation and dropdown menu */
  & .ds-link {
    --dsc-link-color--visited: var(--dsc-link-color);
    color: var(--ds-color-neutral-text-default);
  }

  & .ds-link:has(.at-header__logo) {
    font-weight: var(--ds-font-weight-medium);
    text-decoration: none;
    line-height: var(--ds-line-height-sm);
    font-size: var(--ds-font-size-5);
    letter-spacing: var(--ds-letter-spacing-8);
    transform: translateY(
      -2.5px
    ); /** Literata font med line is noticably lower than other fonts. This counteracts it somewhat, without looking dumb with other fonts */
  }
}

.at-header__container {
  width: 100%;
  max-width: var(--at-header-max-width);
  display: flex;
  flex-direction: row;
  box-sizing: border-box;
  align-items: center;
}

.at-header__left,
.at-header__center,
.at-header__right {
  display: flex;
  align-items: center;
}

.at-header__left {
  justify-content: flex-start;
  gap: var(--ds-size-4);
}

.at-header__center {
  justify-content: flex-start;
  gap: var(--ds-size-8);
  flex: 1;
}

.at-header__center:not(:first-child) {
  margin-left: var(--ds-size-26);
}

.at-header__right {
  justify-content: flex-end;
  margin-left: auto;
}

.at-header .ds-link:not(:hover):not(:focus-visible),
.at-header__link:not(:hover):not(:focus-visible) {
  text-decoration-line: none;
}

.at-header__logo {
  display: flex;
}

.at-header__dropdown-trigger {
  font-weight: var(--ds-font-weight-medium);
  color: var(--ds-color-neutral-text-default);
}

.at-header__link {
  font-weight: var(--ds-font-weight-medium);

  &[aria-current="page"] {
    font-weight: var(--ds-font-weight-semibold);
  }
}

.at-header .ds-dropdown.at-header__dropdown-content {
  padding: var(--ds-size-3) var(--ds-size-2);

  & .ds-field:has(input[role="switch"]) {
    color: var(--ds-color-neutral-text-default);
    padding: var(--ds-size-2) var(--ds-size-4);
  }
}

.at-header__dropdown-item-mobile {
  display: none;
}

.at-header__dropdown-close-mobile {
  display: none;
}

.at-header__dropdown-backdrop {
  display: none;
}

.at-header__menu-row {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  gap: var(--ds-size-2);
  height: var(--ds-size-10);
  justify-content: flex-start;
  min-height: unset;
  padding: var(--ds-size-2) var(--ds-size-4);
  text-decoration: none;
  width: 100%;
  color: var(--ds-color-neutral-text-default);
  background: unset;

  &:hover {
    color: var(--ds-color-neutral-text-default);
    background: var(--ds-color-surface-tinted);
  }

  &.padded {
    padding-left: var(--ds-size-11); /** row padding + icon size + gap */
  }
}

.at-header__menu-icon {
  align-items: center;
  display: flex;
  flex-shrink: 0;
  height: fit-content;

  > svg {
    height: var(--ds-size-5);
    width: var(--ds-size-5);
  }
}

.at-header__menu-badge-info,
.at-header__menu-badge-warning,
.at-header__menu-badge-success,
.at-header__menu-badge-danger {
  display: flex;
  align-items: center;
  justify-content: center;
  width: var(--ds-size-7);
  height: var(--ds-size-7);
  border-radius: 50%;
  font-size: var(--ds-font-size-3);
  font-weight: var(--ds-font-weight-regular);
  margin-left: auto;
}

.at-header__menu-badge-info {
  color: var(--ds-color-info-text-default);
  background-color: var(--ds-color-info-surface-tinted);
}
.at-header__menu-badge-warning {
  color: var(--ds-color-warning-text-default);
  background-color: var(--ds-color-warning-surface-tinted);
}
.at-header__menu-badge-success {
  color: var(--ds-color-success-text-default);
  background-color: var(--ds-color-success-surface-tinted);
}
.at-header__menu-badge-danger {
  color: var(--ds-color-danger-text-default);
  background-color: var(--ds-color-danger-surface-tinted);
}

/* Responsive adjustments */
@media (min-width: 48rem) {
  .at-header__dropdown-trigger {
    background: unset;

    &:hover {
      text-decoration: underline;
    }
  }
}

@media (max-width: 48rem) {
  .at-header {
    height: var(--ds-size-18);
    margin: 0;
    padding: var(--ds-size-2) var(--ds-size-4);
  }
  .at-header__container {
    justify-content: space-between;
  }

  .ds-link:has(.at-header__left) {
    height: 100%;
  }

  .at-header__left {
    height: 100%;
    margin-right: 0;
    flex-shrink: 0;
    align-items: flex-end;
  }

  .at-header__center {
    display: none;
  }

  .at-header__right {
    margin-left: 0;
  }

  /* Hide illustration on mobile, keep logo visible */
  .at-header__illustration {
    display: none;
  }

  .at-header__dropdown-item-mobile {
    display: block;
  }

  .at-header .ds-dropdown.at-header__dropdown-content {
    /* Full-width dropdown overlay for mobile */
    width: 100%;
    max-width: 100%;
    padding: calc(2 * var(--ds-size-3)) 0;

    /* Hide box-shadow to avoid line between dropdown menu and header on mobile */
    box-shadow: none;
    border-top: 0;
    border-left: 0;
    border-right: 0;
    border-top-left-radius: 0%;
    border-top-right-radius: 0%;
  }

  .at-header__dropdown-trigger {
    font-weight: var(--ds-font-weight-regular);
    color: var(--ds-color-base-contrast-default);
  }

  .at-header__link {
    color: var(--ds-color-neutral-text-default);
    font-weight: var(--ds-font-weight-regular);
    width: 100%;
    height: var(--ds-size-10);
    min-height: unset;
    display: block;
    padding: var(--ds-size-2) var(--ds-size-4);
    margin: 0;
    box-sizing: border-box;
  }

  .at-header__dropdown-close-mobile {
    display: block;
    margin: var(--ds-size-4);
    margin-bottom: var(--ds-size-2);

    & .ds-button {
      justify-content: center;
    }
  }

  .at-header__dropdown-backdrop {
    display: block;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: rgb(0 0 0 / calc(100% - var(--ds-opacity-disabled)));
    pointer-events: none;
  }
}

